--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JP Retrospect</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #222;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            text-align: center;
+        }
+        h1 {
+            font-size: 3em;
+            color: #ff4081;
+        }
+        p {
+            font-size: 1.2em;
+        }
+        .social-links a {
+            margin: 0 10px;
+            color: #ff4081;
+            text-decoration: none;
+            font-size: 1.5em;
+        }
+        .social-links a:hover {
+            color: #ffa1c1;
+        }
+    </style>
+</head>
 <body>
-
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
+    <div class="container">
+        <h1>Hey, I'm JP!</h1>
+        <p>Welcome to my corner of the internet. Follow me on my journey and check out my social media handles!</p>
+        <div class="social-links">
+            <a href="https://twitter.com/jp_retrospect" target="_blank">Twitter</a>
+            <a href="https://instagram.com/jp_retrospect" target="_blank">Instagram</a>
+            <a href="https://github.com/jp_retrospect" target="_blank">GitHub</a>
+        </div>
+    </div>
 </body>
 </html>
