--- a/stuff.html
+++ b/stuff.html
@@ -6,45 +6,40 @@
     <title>JP Retrospect</title>
     <style>
         body {
+            background-color: #000;
+            color: #00bfff;
             font-family: Arial, sans-serif;
-            background: #222;
-            color: #fff;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
         }
         .container {
             text-align: center;
+            padding: 50px;
         }
-        h1 {
-            font-size: 3em;
-            color: #ff4081;
-        }
-        p {
-            font-size: 1.2em;
+        .header {
+            font-size: 2.5em;
+            margin-bottom: 20px;
         }
         .social-links a {
-            margin: 0 10px;
-            color: #ff4081;
+            color: #00bfff;
             text-decoration: none;
-            font-size: 1.5em;
+            margin: 0 10px;
+            font-size: 1.2em;
         }
         .social-links a:hover {
-            color: #ffa1c1;
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Hey, I'm JP!</h1>
-        <p>Welcome to my corner of the internet. Follow me on my journey and check out my social media handles!</p>
+        <div class="header">JP Retrospect</div>
+        <p>Hi, I'm John Paul Adragna, but you can call me JP.</p>
+        <p>Welcome to my personal website!</p>
         <div class="social-links">
-            <a href="https://twitter.com/jp_retrospect" target="_blank">Twitter</a>
-            <a href="https://instagram.com/jp_retrospect" target="_blank">Instagram</a>
-            <a href="https://github.com/jp_retrospect" target="_blank">GitHub</a>
+            <a href="https://www.youtube.com/c/jp_retrospect" target="_blank">YouTube</a>
+            <a href="https://www.instagram.com/jp_retrospect" target="_blank">Instagram</a>
+            <a href="https://discord.com/users/jp_retrospect" target="_blank">Discord</a>
         </div>
     </div>
 </body>
