--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>Hi, I'm John Paul Adragna, but you can call me JP.</p>
         <p>Welcome to my personal website!</p>
         <div class="social-links">
-            <a href="https://www.youtube.com/c/jp_retrospect" target="_blank">YouTube</a>
+            <a href="https://youtube.com/@jp_retrospect?si=cBxlRgl4g5UA04nf" target="_blank">YouTube</a>
             <a href="https://www.instagram.com/jp_retrospect" target="_blank">Instagram</a>
             <a href="https://discord.com/users/jp_retrospect" target="_blank">Discord</a>
         </div>
