--- a/index.html
+++ b/index.html
@@ -6,40 +6,72 @@
     <title>JP Retrospect</title>
     <style>
         body {
-            background-color: #000;
-            color: #00bfff;
             font-family: Arial, sans-serif;
+            background-color: #000000;
+            color: #ffffff;
             margin: 0;
             padding: 0;
         }
         .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header {
+            background-color: #00008B;
+            padding: 20px 0;
             text-align: center;
-            padding: 50px;
         }
-        .header {
+        h1 {
+            margin: 0;
             font-size: 2.5em;
-            margin-bottom: 20px;
         }
-        .social-links a {
-            color: #00bfff;
+        nav {
+            margin-top: 20px;
+        }
+        nav a {
+            color: #ffffff;
             text-decoration: none;
             margin: 0 10px;
-            font-size: 1.2em;
         }
-        .social-links a:hover {
-            text-decoration: underline;
+        .content {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 40px;
+        }
+        .main {
+            flex: 2;
+            padding-right: 20px;
+        }
+        .sidebar {
+            flex: 1;
+            background-color: #00008B;
+            padding: 20px;
         }
     </style>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1>JP Retrospect</h1>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+    </header>
     <div class="container">
-        <div class="header">JP Retrospect</div>
-        <p>Hi, I'm John Paul Adragna, but you can call me JP.</p>
-        <p>Welcome to my personal website!</p>
-        <div class="social-links">
-            <a href="https://youtube.com/@jp_retrospect?si=cBxlRgl4g5UA04nf" target="_blank">YouTube</a>
-            <a href="https://www.instagram.com/jp_retrospect" target="_blank">Instagram</a>
-            <a href="https://discord.com/users/jp_retrospect" target="_blank">Discord</a>
+        <div class="content">
+            <div class="main">
+                <h2>About John Paul Adragna (JP)</h2>
+                <p>Welcome to my professional website. I'm John Paul Adragna, but you can call me JP. I'm passionate about [your interests/skills].</p>
+            </div>
+            <div class="sidebar">
+                <h3>Connect with me</h3>
+                <p>YouTube: jp_retrospect</p>
+                <p>Instagram: jp_retrospect</p>
+            </div>
         </div>
     </div>
 </body>
