--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="content">
             <div class="main">
                 <h2>About John Paul Adragna (JP)</h2>
-                <p>Welcome to my professional website. I'm John Paul Adragna, but you can call me JP. I'm passionate about [your interests/skills].</p>
+                <p>Welcome to my professional website. More will be added here soon.</p>
             </div>
             <div class="sidebar">
                 <h3>Connect with me</h3>
